# nitro_webgpu

./: .clangd  .gitignore  .metadata  CHANGELOG.md  LICENSE  PARITY.md  README.md  build.yaml  ffigen.yaml  pubspec.yaml  skills-lock.json
.github/workflows/: dawn_prebuilt.yml  integration_test.yml
.zed/: settings.json
android/: build.gradle  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/dev/shreeman/nitro_webgpu/: NitroWebgpuImpl.kt  NitroWebgpuPlugin.kt  NitroWebgpuPresentImpl.kt  NwpSurfacePresenter.kt
doc/upstream/: wgpu-native-handle-accessors.md
docs/: DAWN_MIGRATION.md  MIGRATION.md
docs/upstream/: wgpu-native-handle-accessors.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/shreeman/nitro_webgpu_example/: MainActivity.kt
example/integration_test/: adapter_support.dart  scratch_particles_screen_test.dart  wgpu_hardware_adapter_test.dart  wgpu_instance_test.dart  wgpu_parity_complex_test.dart  wgpu_robustness_test.dart  wgpu_showcase_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  shot_main.dart
example/lib/src/demos/: adapter_probe_page.dart  benchmark_page.dart  compute_page.dart  compute_toy_page.dart  custom_shader.dart  live_scene_page.dart  multi_view_page.dart  offscreen_page.dart  particles_page.dart  shader_cards_page.dart  shader_toy_page.dart  shader_ui_page.dart  shadertoy_player_page.dart
example/lib/src/gpu/: benchmark_scenes.dart  gpu_context.dart  particle_scene.dart  pass_timer.dart  perf_log.dart  scenes.dart  shader_presets.dart  shader_toy_scene.dart  shadertoy_engine.dart
example/lib/src/showcase/: showcase_gallery_page.dart  showcases.dart
example/lib/src/widgets/: editor_shell.dart  fps_overlay.dart  gpu_scene_view.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: nitro_webgpu.podspec
ios/Classes/: NitroWebgpuImpl.swift  NitroWebgpuPresentModuleImpl.swift  SwiftNitroWebgpuPlugin.swift  nitro_webgpu.bridge.g.h  nitro_webgpu.bridge.g.mm  nitro_webgpu.bridge.g.swift  nitro_webgpu.c  nitro_webgpu.cpp  nitro_webgpu_present.bridge.g.h  nitro_webgpu_present.bridge.g.mm  nitro_webgpu_present.bridge.g.swift
ios/nitro_webgpu/: Package.swift
ios/nitro_webgpu/Sources/NitroWebgpu/: NitroWebgpuPresentModuleImpl.swift  nitro_webgpu.bridge.g.swift  nitro_webgpu_present.bridge.g.swift
ios/nitro_webgpu/Sources/NitroWebgpuCpp/include/: nitro_webgpu.bridge.g.h  present_core.h
ios/nitro_webgpu/Sources/NitroWebgpuPresentCpp/include/: NitroWebgpuPresentCppExports.h  nitro_webgpu_present.bridge.g.h
lib/: nitro_webgpu.dart  nitro_webgpu_bindings_generated.dart
lib/src/: nitro_webgpu.g.dart  nitro_webgpu.native.dart  nitro_webgpu_present.g.dart  nitro_webgpu_present.native.dart
lib/src/api/: gpu.dart
lib/src/widgets/: web_gpu_view.dart
lib/src/widgets/effects/: web_gpu_shader_view.dart
lib/src/widgets/foundation/: web_gpu.dart  web_gpu_builder.dart
lib/src/widgets/interaction/: web_gpu_input_area.dart
lib/src/widgets/presentation/: web_gpu_view.dart
linux/: CMakeLists.txt  nitro_webgpu_plugin.cc
linux/include/nitro_webgpu/: nitro_webgpu_plugin.h
linux/src/: HybridNitroWebgpuImpl.cpp  HybridNitroWebgpuPresent.cpp
macos/: FlutterFramework  nitro_webgpu.podspec
macos/Classes/: HybridNitroWebgpu.cpp  NitroWebgpuImpl.swift  NitroWebgpuPresentModuleImpl.swift  SwiftNitroWebgpuPlugin.swift  dart_api_dl.c  nitro_webgpu.bridge.g.h  nitro_webgpu.bridge.g.mm  nitro_webgpu.bridge.g.swift  nitro_webgpu_present.bridge.g.h  nitro_webgpu_present.bridge.g.mm  nitro_webgpu_present.bridge.g.swift  present_core.h
macos/nitro_webgpu/: Package.swift
macos/nitro_webgpu/Sources/NitroWebgpu/: NitroWebgpuImpl.swift  NitroWebgpuPresentModuleImpl.swift  SwiftNitroWebgpuPlugin.swift  nitro_webgpu.bridge.g.swift  nitro_webgpu_present.bridge.g.swift
macos/nitro_webgpu/Sources/NitroWebgpuCpp/: HybridNitroWebgpu.cpp  nitro_webgpu.bridge.g.mm  nitro_webgpu.cpp  nitro_webgpu_present.bridge.g.mm
macos/nitro_webgpu/Sources/NitroWebgpuCpp/include/: nitro_webgpu.bridge.g.h
macos/nitro_webgpu/Sources/NitroWebgpuPresentCpp/include/: nitro.h
scripts/: fetch_dawn.sh  fetch_wgpu_native.sh  gen.sh  set_backend_android.sh  set_backend_ios.sh  set_backend_macos.sh  stage_dawn_android.sh  stage_dawn_ios.sh  stage_dawn_macos.sh  wgpu_native.sha256
scripts/ci/: adapter_cycle_probe.c
src/: CMakeLists.txt  HybridNitroWebgpu.cpp  HybridNitroWebgpuPresent.cpp  dart_api_dl.c  nitro_webgpu.c  nitro_webgpu.cpp  nw_backend.h
src/present/: nwp_android_jni.cpp  nwp_texture_ops.h  present_core.cpp  present_core.h
windows/: CMakeLists.txt  nitro_webgpu_plugin.cpp
windows/include/nitro_webgpu/: nitro_webgpu_plugin_c_api.h
windows/src/: HybridNitroWebgpu.cpp  HybridNitroWebgpuPresent.cpp
